--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -8,6 +8,10 @@ en:
       title: Preservica Access Copy Links with Hierarchy
       description: Custom report to retrieve links to digital access copies of archival materials in Preservica. Includes object hierarchy (slower).
       identifier_prefix: Digital Object
+    digital_object_preservica_links_multiple:
+      title: Preservica Access Copy Links, Multiple Collections
+      description: Custom report to retrieve links to digital access copies of archival materials in Preservica. Can include multiple call numbers separated by a comma.
+      identifier_prefix: Digital Object
     resource_all_archival_objects:
       title: All Archival Objects
       description: Custom report to retrieve data about archival objects associated with a resource.
