fix excel date formatting

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -4,10 +4,12 @@ en:
       from: From
       from_tooltip:
       to: To
+      end: End
       locations: Locations
       scope_by_date: Scope by Date
       template: Template
       call_number: Call Number
+      call_number_tooltip: Enter one more more call numbers separated by a comma and a space
     formats:
       json: JSON
       csv: CSV
@@ -18,10 +20,6 @@ en:
     digital_object_preservica_links:
       title: Preservica Access Copy Links
       description: Custom report to retrieve links to digital access copies of archival materials in Preservica.
-      identifier_prefix: Digital Object
-    digital_object_preservica_links_hierarchy:
-      title: Preservica Access Copy Links with Hierarchy
-      description: Custom report to retrieve links to digital access copies of archival materials in Preservica. Includes object hierarchy (slower).
       identifier_prefix: Digital Object
     resource_all_archival_objects:
       title: All Archival Objects
