small fixes, update yml

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -4,23 +4,22 @@ en:
       from: From
       from_tooltip:
       to: To
+      end: End
       locations: Locations
       scope_by_date: Scope by Date
       template: Template
       call_number: Call Number
+      call_number_tooltip: Enter one more more call numbers separated by a comma and a space
     formats:
       json: JSON
       csv: CSV
       pdf: PDF
       html: HTML
       rtf: RTF
+      xlsx: XLSX
     digital_object_preservica_links:
-      title: Preservica Access Copy Links
-      description: Custom report to retrieve links to digital access copies of archival materials in Preservica.
-      identifier_prefix: Digital Object
-    digital_object_preservica_links_hierarchy:
-      title: Preservica Access Copy Links with Hierarchy
-      description: Custom report to retrieve links to digital access copies of archival materials in Preservica. Includes object hierarchy (slower).
+      title: Copy Order Fulfillment
+      description: Returns a report with descriptive data and download links to all Preservica digital access copies available for a given collection(s). Enter one or more call numbers, separated by a comma and a space (i.e. MS 56, RU 595).
       identifier_prefix: Digital Object
     resource_all_archival_objects:
       title: All Archival Objects
@@ -38,9 +37,13 @@ en:
       title: Born Digital Materials
       description: Custom report to retrieve born-digital materials for the current repository.
       identifier_prefix: Resource
+    resource_box_folder_list:
+      title: Box and Folder List
+      description: Retrieves a list of top containers and subcontainers for a given call number
+      identifier_prefix: Resource
     resource_dacs_minimum:
       title: DACS Minimum
-      description: Custom report to perform DACS collection-level minimum analysis on the current repository
+      description: Custom report to perform DACS collection-level minimum analysis on the current repository.
       identifier_prefix: Resource
     resource_distinct_box_list:
       title: Box List
@@ -51,16 +54,40 @@ en:
       description: Custom report to retrieve timebound restrictions for the current repository in a given time period.
       identifier_prefix: Resource
     resource_preservica_materials:
-      title: Preservica Materials Not in Access System
-      description: Custom report of materials in the current repositor which are in Preservica but are not in an access system
+      title: Digitized Materials Not in Access System
+      description: Custom report of materials in the current repositor which are in Preservica but are not in an access system.
       identifier_prefix: Resource
     resource_materials_in_access_system:
       title: Materials in Access System
       description: Custom report of all materials which are available in an online access system.
       identifier_prefix: Resource
+    resource_unstructured_dates:
+      title: Unstructured Dates
+      description: Retrieves a report of date subrecords with a date expression but no begin or end date.
+      identifier_prefix: Resource
+    resource_created_by_month:
+      title: Resources Created Per Month
+      description: Count of resource records created by month/year
+      identifier_prefix: Resource
+    resource_components_created_by_month:
+      title: Archival Objects Created Per Month
+      description: Count of archival object records created by month/year
+      identifier_prefix: Resource
+    resource_extent_type_usage:
+      title: Extent Type Usage
+      description: Retrieves a report with a count of extent types currently in use.
+      identifier_prefix: Resource
+    top_container_no_barcodes:
+      title: Containers Without Barcodes
+      description: Report of all containers in the current repository which do not have barcodes.
+      identifier_prefix: Top Container
+    top_container_no_location:
+      title: Containers Without Locations
+      description: Report of all containers in the current repository which do not have a linked location.
+      identifier_prefix: Top Container
     top_container_unassociated_containers:
       title: Unassociated Containers
-      description: Custom report of all unassociated containers in the current repository
+      description: Custom report of all unassociated containers in the current repository.
       identifier_prefix: Top Container
 
     # looks like we'll need to be careful with the column names, or add a bunch of stuff here???
