add accession report, update hierarchy report

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -17,6 +17,10 @@ en:
       html: HTML
       rtf: RTF
       xlsx: XLSX
+    accession_all_accessions:
+      title: Get All Accessions
+      description: Returns a report with information about accessions.
+      identifier_prefix: Accession
     archival_object_hierarchies:
       title: Get Record Hierarchies
       description: Returns a report with hierarchical breadcrumb information about archival object records.
