Top Container Rooms report

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -10,6 +10,8 @@ en:
       template: Template
       call_number: Call Number
       call_number_tooltip: Enter one more more call numbers separated by a comma and a space
+      building: Building
+      room_name: Room Name
     formats:
       json: JSON
       csv: CSV
@@ -17,14 +19,6 @@ en:
       html: HTML
       rtf: RTF
       xlsx: XLSX
-    accession_all_accessions:
-      title: All Accessions
-      description: Returns a report with information about accessions.
-      identifier_prefix: Accession
-    archival_object_hierarchy:
-      title: Get Record Hierarchies
-      description: Returns a report with hierarchical breadcrumb information about archival object records.
-      identifier_prefix: Archival Object
     digital_object_preservica_links:
       title: Copy Order Fulfillment
       description: Returns a report with descriptive data and download links to all Preservica digital access copies available for a given collection(s). Enter one or more call numbers, separated by a comma and a space (i.e. MS 56, RU 595).
@@ -32,10 +26,6 @@ en:
     resource_all_archival_objects:
       title: All Archival Objects
       description: Custom report to retrieve data about archival objects associated with a resource.
-      identifier_prefix: Resource
-    resource_all_archival_objects_sort_order:
-      title: All Archival Objects, With Sort Order
-      description: Custom report to retrieve data about archival objects associated with a resource, including sort order.
       identifier_prefix: Resource
     resource_acquisitions_report:
       title: Acquisitions by Date
@@ -100,6 +90,10 @@ en:
     top_container_unassociated_containers:
       title: Unassociated Containers
       description: Custom report of all unassociated containers in the current repository.
+      identifier_prefix: Top Container
+    top_container_rooms:
+      title: Top Containers by Room
+      description: Custom Report of Top Containers in a specific Room.
       identifier_prefix: Top Container
 
     # looks like we'll need to be careful with the column names, or add a bunch of stuff here???
