--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -12,6 +12,9 @@ en:
       call_number_tooltip: Enter one more more call numbers separated by a comma and a space
       building: Building
       room_name: Room Name
+      parent: Parent Object ID
+      oid: Digital Object Identifier
+      url: File URL
     formats:
       json: JSON
       csv: CSV
@@ -107,7 +110,15 @@ en:
       title: Top Containers by Room
       description: Custom Report of Top Containers in a specific Room.
       identifier_prefix: Top Container
-
+    expired_access_notes:
+      title: Expired Access Notes
+      description: Report of Resources and Archival Objects with 'Conditions Governing Access' notes with expired machine actionable end-dates.
+      identifier_prefix: Archival Object
+    digital_object_links_report:
+      title: Digital Object Report
+      description: Custom Report of Digital Objects and URLs that allows keyword searching on urls, parent ids, and doi.
+      identifier_prefix: Digital Object
+      
     # looks like we'll need to be careful with the column names, or add a bunch of stuff here???
     # perhaps if translation missing, find a way to convert by captilizing and replaces _-, etc. with a space?
     # adding these here based on the call-number / box listing report.
