--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -118,7 +118,7 @@ en:
       title: Digital Object Report
       description: Custom Report of Digital Objects and URLs that allows keyword searching on urls, parent ids, and doi.
       identifier_prefix: Digital Object
-    preservica_object_report:
+    digital_object_report:
       title: Digital Object Report
       description: Report of archival objects containing both a DCS and Preservica Digital Object associated with a call number.
       identifier_prefix: Resource
